fix: don't wrap whitespace in tree view

--- a/client/src/Components/TreeView/TreeView.module.css
+++ b/client/src/Components/TreeView/TreeView.module.css
@@ -1,3 +1,4 @@
 .treeView {
     padding: 1rem 0 2rem;
+    white-space: nowrap;
 }
